<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#ffff00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/linearLayout1">

        <TextView
            android:id="@+id/tvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pname"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="10"
            android:textStyle="bold"
            android:inputType="textPersonName|textCapWords"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/textViewOperand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lname"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/input2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="10"
            android:textStyle="bold"
            android:inputType="textPersonName|textCapWords" />
    </LinearLayout>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/linearLayout2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2" />
    </RadioGroup>
    <Button
        android:id="@+id/bt2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="53dp"
        android:text="@string/button2"
        android:layout_below="@+id/rg"
        android:layout_centerHorizontal="true"
        android:background="#40d0d0"
        android:onClick="sendMessage2"/>

</RelativeLayout>